<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cafeMR"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BienvenidaR"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/titleR"
                android:id="@+id/mensaje_bienvenida"
                android:layout_marginBottom="20dp"
                />

            <ImageView
                android:layout_width="@dimen/imageFondo"
                android:layout_height="@dimen/imageFondo"
                android:src="@mipmap/imagen_register"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/nombre"
                android:textSize="@dimen/textViewSize"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPersonName"
                android:importantForAutofill="no"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:backgroundTint="@color/white"
                android:id="@+id/name_input"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/apellido"
                android:textSize="@dimen/textViewSize"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPersonName"
                android:importantForAutofill="no"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:backgroundTint="@color/white"
                android:id="@+id/last_name_input"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:textSize="@dimen/textViewSize"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:backgroundTint="@color/white"
                android:id="@+id/email_input"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/pwr"
                android:textSize="@dimen/textViewSize"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:backgroundTint="@color/white"
                android:id="@+id/pwr_input"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/rptPwr"
                android:textSize="@dimen/textViewSize"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:backgroundTint="@color/white"
                android:id="@+id/rpt_pwr_input"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/btnRegistrarse"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@color/btnR"
                android:id="@+id/btn_register"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/btnDuda"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@color/btnR"
                android:id="@+id/btn_dudas"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/message_register"
                android:textColor="@color/rojoCarmesi"
                android:textSize="20dp"
                android:gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>