<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main1"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/linear1"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/title_home"
            android:textColor="@color/moradoT"
            android:textSize="@dimen/titleC"
            android:textStyle="bold"
            android:id="@+id/cjzr"/>

        <ImageView
            android:id="@+id/img1"
            android:layout_width="@dimen/imageFondo"
            android:layout_height="@dimen/imageFondo"
            android:src="@mipmap/ic_launcher_round_1"
            android:scaleType="centerCrop"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/linear2">

        <TextView
            android:id="@+id/text_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="@string/mensaje_home"
            android:textColor="@color/mensajeHome"
            android:textSize="@dimen/textHome"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:background="@color/boton1"
            android:textColor="@color/white"
            android:layout_marginBottom="25dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/mensajeHome"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:id="@+id/nameApp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/mensajeHome"
            android:layout_marginBottom="25dp"
            android:textStyle="bold"
            android:id="@+id/versionApp"/>

    </LinearLayout>


</RelativeLayout>